force-app/main/default/objects/Task__c/fields/AssignedResource__c.field-meta.xml
<CustomField>
    <fullName>AssignedResource__c</fullName>
    <label>AssignedResource</label>
    <referenceTo>TeamProgress__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>