force-app/main/default/objects/Task__c/fields/EndTaskDate__c.field-meta.xml
<CustomField>
    <fullName>EndTaskDate__c</fullName>
    <label>EndTaskDate</label>
    <type>Date</type>
</CustomField>