force-app/main/default/objects/Task__c/fields/EstimatedHours__c.field-meta.xml
<CustomField>
    <fullName>EstimatedHours__c</fullName>
    <formula>((5 * ( FLOOR( ( EndTaskDate__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( EndTaskDate__c - DATE( 1900, 1, 8), 7 ) ) ) - (5 * ( FLOOR( ( StartTaskDate__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( StartTaskDate__c - DATE( 1900, 1, 8), 7 ) ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EstimatedHours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>