force-app/main/default/objects/Task__c/fields/RecordHours__c.field-meta.xml
<CustomField>
    <fullName>RecordHours__c</fullName>
    <label>RecordHours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>