force-app/main/default/objects/Task__c/fields/Resume__c.field-meta.xml
<CustomField>
    <fullName>Resume__c</fullName>
    <label>Resume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>