force-app/main/default/objects/Task__c/fields/StartTaskDate__c.field-meta.xml
<CustomField>
    <fullName>StartTaskDate__c</fullName>
    <label>StartTaskDate</label>
    <type>Date</type>
</CustomField>