force-app/main/default/objects/Task__c/validationRules/CanNotModifyStatusInProgress.validationRule-meta.xml
<ValidationRule>
    <fullName>CanNotModifyStatusInProgress</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(  AssignedResource__r.ProjectLineItem__r.ProjectAssigned__r.Status__c  ,&apos;In Progress&apos;)</errorConditionFormula>
    <errorMessage>You can not modify any field beause the project is in progress stage</errorMessage>
</ValidationRule>